--- a/assets/scss/parts/single-and-page.scss
+++ b/assets/scss/parts/single-and-page.scss
@@ -3,11 +3,11 @@
  */
 body.single,
 body.page:not(.home) {
-  article {@apply pb-10;
-    // Default max-width for all content elements
-    & > * {@apply mx-auto max-w-2xl px-6;}
+  article {@apply pb-10 mx-auto px-6 max-w-2xl;
+    @screen md {@apply px-0;}
 
-    .post-thumbnail {@apply relative max-w-full px-0; // unset default max-width
+    .post-thumbnail {@apply relative w-screen;
+      margin-left: calc(-50vw + 50%);
       .post-thumbnail-bg-layer {@apply absolute w-full h-full; filter: blur(8px); z-index: -1; clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%); background-size: 70%;}
       .post-thumbnail-image {@apply mx-auto object-cover; width: 100%; max-width: 1200px; max-height: 300px;}
     }
